k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-6479
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
